# soundswitch-auto-pilot

./: .gitignore  CLAUDE.md  auto_pilot  main.py  midi_ctrl.ipynb  midi_message.py  os2l_client.py  os2l_client2.py  pyproject.toml  requirements.txt  simulate_auto_pilot  spotify_details.json.example
archive/: beatDetector.py  osc.py
docs/: soundswitch_os2l_protocol.json  ss_vdj_traffic.pcapng
docs/superpowers/plans/: 2026-04-13-ground-truth-evaluation-and-threshold-optimization.md
lib/: main.py
lib/analyser/: CLAUDE.md  exp_filter.py  lightshow_classifier.py  music_analyser.py  music_analyser_handler.py  yamnet_change_detector.py
lib/clients/: midi_client.py  midi_message.py  os2l_client.py  os2l_messages.py  os2l_sender.py  overlay_client.py  overlay_definitions.py  pyaudio_client.py  spotify_client.py
lib/effects/: rgb_visualizer.py
lib/engine/: autoloop_actions.py  autoloop_controler.py  autoloop_controller.py  delayed_command_queue.py  effect_controller.py  effect_definitions.py  event_buffer.py  light_engine.py
lib/visualizer/: curve_visualizer.py  self_similarity_matrix.py  spectogram.py  visualizer.py  visualizer_types.py
samples/: generate_eric_prydz_192k.csv
simulate/: cli.py  evaluator.py  event_buffer.py  fake_audio_client.py  runner.py  stub_clients.py  visualizer_app.py
specs/: 2026-04-13-ground-truth-evaluation-and-threshold-optimization.md
src/: main.py
src/analyser/: beatDetector.py  midi.py  music_analyser.py  music_analyser_handler.py
src/clients/: midi_client.py  pyaudio_client.py
tests/: conftest.py  test_classify_intent.py  test_delayed_command_queue.py  test_effect_controller.py  test_effect_definitions.py  test_evaluator.py  test_intent_stability.py  test_lightshow_classifier.py  test_music_analyser.py  test_simulation.py
training/: README.txt  model.pkl  multi_channel_yamnet.py  music_vae_testing.py  openl3_testing.py  train.py  yamnet_testing.py
