[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soundswitch-auto-pilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-rtmidi==1.4.9",
    "cython",
    "aubio",
    "numpy",
    "pyaudio",
    "matplotlib",
    "pandas",
    "tensorflow",
    "tensorflow-hub",
    "scipy",
    "python-osc",
    "scikit-learn",
    "librosa",
    "argcomplete",
    "zeroconf",
    "netifaces",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jupyterlab",
]
visualizer = [
    "dash>=2.14",
    "sounddevice",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: full-pipeline simulation tests (slow, requires aubio)",
]
