[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []   # application, not a library — nothing to install

[project]
name = "soundswitch-auto-pilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-rtmidi>=1.5,<2",
    "cython",
    "aubio",
    "numpy>=1.26,<2",
    "pyaudio",
    "matplotlib",
    "pandas",
    "tensorflow>=2.16,<2.17",
    "tensorflow-hub>=0.16,<0.17",
    "scipy",
    "python-osc",
    "scikit-learn",
    "librosa",
    "argcomplete",
    "zeroconf",
    "netifaces",
    "setuptools<71",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jupyterlab",
]
visualizer = [
    "dash>=2.14",
    "sounddevice",
]

[tool.uv]
extra-build-variables = { aubio = { CFLAGS = "-Wno-incompatible-function-pointer-types" } }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: full-pipeline simulation tests (slow, requires aubio)",
]
